--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>About - Responsive portfolio website - Bedimcode</title>
+      <title>Work - Responsive portfolio website - Bedimcode</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -21,8 +21,8 @@
 
       <!--==================== MAIN ====================-->
       <main class="main">
-         <!--==================== ABOUT ====================-->
-         <section class="about section">
+         <!--==================== WORK ====================-->
+         <section class="work section">
             
          </section>
       </main>
